# BigPictureSwitch

./: .gitmodules  BigPictureSwitch.cpp  BigPictureSwitch.filters  BigPictureSwitch.h  BigPictureSwitch.rc  BigPictureSwitch.sln  BigPictureSwitch.vcxproj  BigPictureSwitchAudio.cpp  BigPictureSwitchAudio.h  BigPictureSwitchCEC.cpp  BigPictureSwitchCEC.h  BigPictureSwitchDisplay.cpp  BigPictureSwitchDisplay.h  CMakeLists.txt  CMakePresets.json  README.md  framework.h  resource.h  targetver.h
.github/workflows/: cmake.yml  msbuild.yml
